--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://hederalp-backend.onrender.com/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "https://hederalp.com",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization",
-        "Access-Control-Allow-Credentials": "true"
-      }
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/api/:path*",
+      "destination": "https://hederalp-backend.onrender.com/:path*"
     }
   ],
   "headers": [
@@ -98,12 +81,5 @@
     "NEXT_PUBLIC_ENABLE_ADVANCED_MODE": "true",
     "NEXT_PUBLIC_ENABLE_BACKTEST_MODE": "true",
     "NEXT_PUBLIC_ENABLE_PWA": "true"
-  },
-  "functions": {
-    "pages/api/**/*.js": {
-      "maxDuration": 30
-    }
-  },
-  "regions": ["iad1"],
-  "framework": "nextjs"
+  }
 }
