--- a/vercel.json
+++ b/vercel.json
@@ -67,7 +67,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(png|jpg|jpeg|gif|webp|svg|ico|woff|woff2))",
+      "source": "/:path*.(png|jpg|jpeg|gif|webp|svg|ico|woff|woff2)",
       "headers": [
         {
           "key": "Cache-Control",
