Add interactive liquidity depth chart (like SaucerSwap)
Features:
- Interactive chart showing liquidity distribution by price
- Zoom in/out with mouse wheel or buttons
- Pan chart by dragging
- Visual indicators for current price and selected range
- Gradient fill showing volume concentration
- Tooltips showing exact volume at each price
- Reset zoom button

Components:
- New LiquidityDepthChart component with Chart.js + zoom/annotation plugins
- Integrated into FeeCalculatorPanel
- Fetches data from /liquidity-distribution endpoint
- Shows where trading activity is concentrated
- Helps users visually choose optimal price ranges

Dependencies added:
- chartjs-plugin-zoom
- chartjs-plugin-annotation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "chartjs-plugin-annotation": "^3.0.1",
     "clsx": "^2.0.0",
     "cross-env": "^10.0.0",
     "date-fns": "^2.30.0",
