--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@next/bundle-analyzer": "^15.5.3",
     "@tanstack/react-query": "^5.8.4",
     "@types/node": "^24.5.1",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
-    "chartjs-plugin-zoom": "^2.0.1",
     "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-zoom": "^2.0.1",
     "clsx": "^2.0.0",
     "cross-env": "^10.0.0",
     "date-fns": "^2.30.0",
